spacing issues

--- a/src/pages/operator/css/Operator.css
+++ b/src/pages/operator/css/Operator.css
@@ -129,7 +129,7 @@
     justify-content: center;
     padding-top: 20px;
     padding-bottom: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 #operator-body {
